tests/transpiler/x/hs/group_by_multi_join.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/group_by_multi_join.hs:29:28: error:
    Variable not in scope: part
    Suggested fix:
      Notice that ‘part’ is a field selector belonging to the type ‘GenType3’
      that has been suppressed by NoFieldSelectors.
   |
29 | filtered = [Map.fromList [(part, ps.part), (value, ps.cost * ps.qty)] | ps <- partsupp, s <- suppliers, n <- nations, s.id == ps.supplier && n.id == s.nation && n.name == "A"]
   |                            ^^^^

/workspace/mochi/tests/transpiler/x/hs/group_by_multi_join.hs:29:45: error:
    Variable not in scope: value
   |
29 | filtered = [Map.fromList [(part, ps.part), (value, ps.cost * ps.qty)] | ps <- partsupp, s <- suppliers, n <- nations, s.id == ps.supplier && n.id == s.nation && n.name == "A"]
   |                                             ^^^^^

/workspace/mochi/tests/transpiler/x/hs/group_by_multi_join.hs:31:27: error:
    Variable not in scope: part
    Suggested fix:
      Notice that ‘part’ is a field selector belonging to the type ‘GenType3’
      that has been suppressed by NoFieldSelectors.
   |
31 | grouped = [Map.fromList [(part, g.key), (total, sum [r.value | r <- g.items])] | g <- [MGroup {key = k, items = [x | x <- filtered, x.part == k]} | k <- nub (map (\x -> x.part) [x | x <- filtered])]]
   |                           ^^^^

/workspace/mochi/tests/transpiler/x/hs/group_by_multi_join.hs:31:42: error:
    Variable not in scope: total
   |
31 | grouped = [Map.fromList [(part, g.key), (total, sum [r.value | r <- g.items])] | g <- [MGroup {key = k, items = [x | x <- filtered, x.part == k]} | k <- nub (map (\x -> x.part) [x | x <- filtered])]]
   |                                          ^^^^^
